--- a/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
+++ b/src/app/modules/deceased-customer/referback-deceased/referback-deceased.component.html
@@ -1,6 +1,13 @@
 <div class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">List of Deceased Customers</div>
-    <div class="mat-table__wrapper pt-4">
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">List of Deceased Customers</div>
+        </div>
+    </div>
+
+
+    <div class="mat-table__wrapper">
         <!--[style.height]="gridHeight"-->
         <mat-table class="lmat-elevation-z8"
                    #table
