--- a/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
+++ b/src/app/modules/reschedule-cases/search-rc/search-rc.component.html
@@ -1,124 +1,139 @@
 +<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Advance Search for Reschedule Cases</div>
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Advance Search for Reschedule Cases</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
+    </div>
 
     <!-- Header -->
-    <div class="pt-4" [formGroup]="rcSearch">
 
 
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                        <mat-label class="customMatLabel">Zone</mat-label>
-                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                            <mat-option [value]="SelectedZones?.ZoneId">
-                                {{SelectedZones?.ZoneName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                        <mat-label class="customMatLabel">Zone</mat-label>
-                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                                    (selectionChange)="changeZone($event)">
-                            <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                        [disabled]="disable_zone">
-                                {{zone?.ZoneName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="pt-4" [formGroup]="rcSearch">
+
+
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+        
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                                <mat-label class="customMatLabel">Zone</mat-label>
+                                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                                    <mat-option [value]="SelectedZones?.ZoneId">
+                                        {{SelectedZones?.ZoneName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+                                <mat-label class="customMatLabel">Zone</mat-label>
+                                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                                            (selectionChange)="changeZone($event)">
+                                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                                [disabled]="disable_zone">
+                                        {{zone?.ZoneName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                
+                
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+        
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                            *ngIf="!single_branch">
+                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                                    >
+                                        {{branch?.Name}}
+                                    </mat-option>
+                                </mat-select>
+                                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                            *ngIf="single_branch">
+                                    <mat-option [value]="SelectedBranches?.BranchCode"
+                                    >
+                                        {{SelectedBranches?.Name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Application Date(ddMMyyyy) <strong class="matMandatory">*</strong>
+                                </mat-label>
+                                <input readonly="readonly" matInput [matDatepicker]="picker3" formControlName="TrDate"
+                                       [max]="today">
+                                <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                                <mat-datepicker #picker3></mat-datepicker>
+                                <!--<mat-error *ngIf="hasError('AppDate', 'required')">Application Date <strong>required</strong></mat-error>-->
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
         
         
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Loan Case#</mat-label>
+                                <input matInput placeholder="Enter Loan Case No" formControlName="Lcno" maxlength="10"
+                                       autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label>Status</mat-label>
+                                <mat-select formControlName="Status">
+                                    <mat-option>
+                                        <ngx-mat-select-search placeholderLabel="Search Loan Status..."
+                                                               (focusout)="validateLoanStatusOnFocusOut()"
+                                                               noEntriesFoundLabel="No Loan Status Found"
+                                                               (keyup)="searchLoanStatus($event.target.value)">
+                                        </ngx-mat-select-search>
+                                    </mat-option>
+                                    <mat-option *ngFor="let loanStatus of SelectedLoanStatus" [value]="loanStatus.Id">
+                                        {{loanStatus.Name }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+        
                 </div>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                        <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                    *ngIf="!single_branch">
-                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                            >
-                                {{branch?.Name}}
-                            </mat-option>
-                        </mat-select>
-                        <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                    *ngIf="single_branch">
-                            <mat-option [value]="SelectedBranches?.BranchCode"
-                            >
-                                {{SelectedBranches?.Name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Application Date(ddMMyyyy) <strong class="matMandatory">*</strong>
-                        </mat-label>
-                        <input readonly="readonly" matInput [matDatepicker]="picker3" formControlName="TrDate"
-                               [max]="today">
-                        <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-                        <mat-datepicker #picker3></mat-datepicker>
-                        <!--<mat-error *ngIf="hasError('AppDate', 'required')">Application Date <strong>required</strong></mat-error>-->
-                    </mat-form-field>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Loan Case#</mat-label>
-                        <input matInput placeholder="Enter Loan Case No" formControlName="Lcno" maxlength="10"
-                               autocomplete="off"/>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label>Status</mat-label>
-                        <mat-select formControlName="Status">
-                            <mat-option>
-                                <ngx-mat-select-search placeholderLabel="Search Loan Status..."
-                                                       (focusout)="validateLoanStatusOnFocusOut()"
-                                                       noEntriesFoundLabel="No Loan Status Found"
-                                                       (keyup)="searchLoanStatus($event.target.value)">
-                                </ngx-mat-select-search>
-                            </mat-option>
-                            <mat-option *ngFor="let loanStatus of SelectedLoanStatus" [value]="loanStatus.Id">
-                                {{loanStatus.Name }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-            </div>
-
-        </div>
-
-
-        <div class="row pb-3">
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
-                    <button mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+        
+        
+                <div class="row pb-3">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
+                            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+      </div>    
 
 
 
+    <!-- Header -->
 
-
-
-
-
-
-    </div>
     <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
         <mat-table class="example-table-container"
                    #table
