--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -194,3 +194,7 @@ body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disab
 .mat-form-field-wrapper{
   padding-bottom: 8px;
 }
+
+.mat-error{
+  padding-top: 7px;
+}
