--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -1,7 +1,25 @@
-<div
-    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl mt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Borrower Information</div>
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Borrower Information</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
+    </div>
+
+    <!-- Header -->
+
+
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
     <!-- Header -->
     <div class="py-4" [formGroup]="borrowerForm">
 
@@ -87,7 +105,7 @@
             <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <button class="mat-primary" mat-raised-button color="accent"
+                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class="mat-primary" mat-raised-button color="accent"
                             type="button" (click)="getBorrower()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
@@ -99,6 +117,12 @@
 
 
     </div>
+        </div>
+      </div>
+
+
+
+
     <div class="flex flex-auto" style="flex-direction: column; overflow-y: scroll">
         <div class="example-table-container">
             <!--[style.height]="gridHeight"-->
