--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -198,3 +198,6 @@ body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disab
 .mat-error{
   padding-top: 7px;
 }
+.mat-hint {
+  padding-top: 7px;
+}
