--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -197,15 +197,30 @@
                            matSortDirection="asc"
                            matSortDisableClear>
 
-                    <ng-container matColumnDef="BranchName">
-                        <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>
-                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchName}}</mat-cell>
-                    </ng-container>
+<!--                    <ng-container matColumnDef="BranchName">-->
+<!--                        &lt;!&ndash; ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview &ndash;&gt;-->
+<!--                        <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Name</mat-header-cell>-->
+<!--                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchName}}</mat-cell>-->
+<!--                    </ng-container>-->
 
                     <ng-container matColumnDef="BranchCode">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Branch Code</mat-header-cell>
                         <mat-cell *matCellDef="let loanutilization">{{loanutilization.BranchCode}}</mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Gl">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Gl</mat-header-cell>
+                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.Gl}}</mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="SchemeCode">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Scheme code</mat-header-cell>
+                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.SchemeCode}}</mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Cropcode">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Crop code</mat-header-cell>
+                        <mat-cell *matCellDef="let loanutilization">{{loanutilization.Cropcode}}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="LoanCaseNo">
