pages list styling

--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -40,7 +40,7 @@
                          *ngFor="let activity of userActivities;let i=index">
                         <div class="custom-accordion-head border-0" (click)="toggleAccordion(activity.ActivityID)"
                              style="cursor: pointer">
-                            <div class="custom-padding" style="align-self: center;">
+                            <div class="ml-8" style="align-self: center;">
                                 <h3 class="font-bold">
                                     {{activity.ActivityName}}
                                 </h3>
