--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -1,43 +1,54 @@
-<div class="px-10 pt-4 absolute inset-0 flex flex-col min-w-0 overflow-y-scroll bg-white" cdkScrollable>
+<div class="px-10 absolute inset-0 flex flex-col min-w-0 overflow-y-scroll bg-white" cdkScrollable>
+
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">Document Type List</div>
+        </div>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
+        </div>
+    </div>
 
     <!-- Header -->
-    <div
-        class="pt-4">
-        <div class="flex-1 min-w-0">
 
-            <!-- Title -->
-            <div>
-                <h2 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">
-                    Document Type List
-                </h2>
-            </div>
-        </div>
 
-        
-        <div class="row pt-4">
-            <div class="col-lg-4 col-sm-12">
-                <mat-form-field appearance="outline" class="w-full">
-                    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
-                           maxlength="30" autocomplete="off">
-                    <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
-                </mat-form-field>
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="row pt-4">
+                <div class="col-lg-4 col-sm-12">
+                    <mat-form-field appearance="outline" class="w-full">
+                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
+                               maxlength="30" autocomplete="off">
+                        <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                    </mat-form-field>
+                </div>
             </div>
-        </div>
-        <div class="row my-2">
-            <div class="col-lg-4 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                    <button (click)="addDocumentType()" mat-raised-button color="primary" type="button"
-                            class="btn btn-primary">
-                        <span>New Type</span>
-                    </button>
-        
+            <div class="row my-2">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                        <button (click)="addDocumentType()" mat-raised-button color="primary" type="button"
+                                class="btn btn-primary">
+                            <span>New Type</span>
+                        </button>
+            
+                    </div>
                 </div>
             </div>
         </div>
+      </div>
 
-        <!-- Actions -->
 
-    </div>
+
+
+
+    <!-- Header -->
+
     <div class="example-table-container">
 
         <mat-table class="lmat-elevation-z8 "
