--- a/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
+++ b/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
@@ -1,34 +1,58 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
-    <div class=" mt-4 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">View Map</div>
+
     <!-- Header -->
-    <div class=" py-2"
-    >
-    
-    <div class="row">
-        <div class="col-lg-4 col-sm-12">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-                <mat-label>Zone</mat-label>
-                <mat-select (selectionChange)="GetBranches($event)" [(ngModel)]="zoneInitial">
-                    <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
-                        {{zone.ZoneName }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+
+    <div class="row py-3">
+        <div class="col-lg-8 col-sm-12">
+            <div class="text-3xl   font-extrabold tracking-tight border-b" style="width: fit-content;">View Map</div>
         </div>
-        <div class="col-lg-4 col-sm-12">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
-                <mat-label>Branch</mat-label>
-                <mat-select (selectionChange)="loadCirclesSinglePoints($event)" [(ngModel)]="branchInitial">
-                    <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
-                        {{branch.Name }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+        <div class="col-lg-4 col-sm-12 self-center">
+            <p class="text-right">
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                </button>
+              </p>
         </div>
     </div>
+
+    <!-- Header -->
+
+
+
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="row">
+                <div class="col-lg-4 col-sm-12">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+                        <mat-label>Zone</mat-label>
+                        <mat-select (selectionChange)="GetBranches($event)" [(ngModel)]="zoneInitial">
+                            <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
+                                {{zone.ZoneName }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+                        <mat-label>Branch</mat-label>
+                        <mat-select (selectionChange)="loadCirclesSinglePoints($event)" [(ngModel)]="branchInitial">
+                            <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
+                                {{branch.Name }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+
+    
+
         
 
-    </div>
+
 
     <!-- Main -->
 
